env. variable for the PORT and new NPM script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "repository": "/",
   "scripts": {
+    "serve": "node index.js",
     "start": "nodemon index.js"
   },
   "keywords": [],
